# AzureMigrateSimulations

./: .gitignore  README.md  discovery_report.json  pyproject.toml  run_discovery.py  run_output.txt  show_summary.py  test_viz.py
.github/agents/: copilot-instructions.md
.github/prompts/: speckit.constitution.prompt.md
data/: dynatrace_enrichment_export.json  perf_history.json  whatif_overrides.json  workload_discovery.json
scripts/: capture_screenshots.py  generate_dynatrace_enrichment.py  manual_test_upload.py  manual_test_viz.py  run_discovery.py  show_summary.py
specs/: 000-core-data-models.spec.md  001-connect-data-ingestion.spec.md  002-dashboard.spec.md  003-inventory.spec.md  004-topology-views.spec.md  005-vm-assessment.spec.md  006-workload-assessment.spec.md  007-vm-simulation-whatif.spec.md  008-workload-simulation-whatif.spec.md  009-business-case.spec.md  010-enrichment-data-loop.spec.md  011-performance-monitoring.spec.md  012-vulnerability-sla.spec.md  013-csv-export.spec.md  014-cli-interface.spec.md  015-web-application.spec.md  README.md
specs/001-cloud-topology-diagram/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cloud-topology-diagram/checklists/: requirements.md
specs/001-cloud-topology-diagram/contracts/: api-topology.md
src/azure_migrate_simulations/: azure_pricing.py  cloud_topology.py  dtdl_models.json  enrichment.py  main.py  models.py  vulnerability_sla.py  workload_mapping.py
src/azure_migrate_simulations/web/: __init__.py  app.py  validation.py
src/azure_migrate_simulations/web/templates/: index.html
src/digital_twin_migrate/: __init__.py  azure_mapping.py  azure_pricing.py  azure_provisioning.py  config.py  guest_discovery.py  main.py  models.py  models_workload.py  perf_aggregator.py  twin_builder.py  vcenter_discovery.py  visualization.py  workload_mapping.py
src/digital_twin_migrate/web/: app.py
src/digital_twin_migrate/web/templates/: index.html
tests/: conftest.py  test_azure_mapping.py  test_cloud_topology.py  test_config.py  test_models.py  test_visualization.py
web/: app.py
web/templates/: index.html
