[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-migrate-simulations"
version = "0.1.0"
description = "Discover VMware vCenter workloads and simulate Azure migration scenarios"
requires-python = ">=3.10"
dependencies = [
    "pyVmomi>=8.0.0.1",
    "azure-digitaltwins-core>=1.2.0",
    "azure-identity>=1.15.0",
    "azure-mgmt-digitaltwins>=6.4.0",
    "azure-mgmt-resource>=23.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
web = ["flask>=3.0.0"]
guest = ["paramiko>=3.0.0", "pywinrm>=0.4.0"]
db = ["pymssql>=2.2.0", "psycopg2-binary>=2.9.0", "pymongo>=4.0.0"]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0"]
all = [
    "azure-migrate-simulations[web,guest,db,dev]",
]

[project.scripts]
dt-migrate = "azure_migrate_simulations.main:main"
dt-migrate-web = "azure_migrate_simulations.web.app:main"

# ---------------------------------------------------------------------------
# Setuptools – src-layout package discovery
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
azure_migrate_simulations = ["dtdl_models.json", "web/templates/**/*"]

# ---------------------------------------------------------------------------
# Pytest configuration
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
